--- a/style.css
+++ b/style.css
@@ -135,3 +135,49 @@ letter-spacing: 0.3rem;
 }
 
 /* end of content section */
+
+/* client section */
+#client .client{
+    padding: 80px;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    align-items: center;
+}
+#client h1{
+    text-align: center;
+    text-transform: uppercase;
+    padding: 20px;
+    letter-spacing: .5rem;
+    color: gray;
+}
+#client .container{
+    display: inline-block;
+    width: 350px;
+    align-items: center;
+    justify-content: center;
+    padding: 50px;
+    text-align: center;
+
+}
+#client img{
+    height: 50px;
+    width: 50px;
+    border-radius: 50px;
+    margin-bottom: 10px;
+}
+#client p{
+    padding: 20px;
+    padding-bottom: 50px;
+}
+#client h2{
+    font-size: 1.2rem;
+    font-weight: 650;
+    color: rgb(32, 32, 117);
+    padding-bottom: 10px;
+}
+#client h3{
+    font-size: 1rem;
+    font-weight: 500;
+}
+/* end of client section */
